# plasma-desktop-kcms

./: CMakeLists.txt  feren-theme-tool-plasma
debian/: changelog  control  plasma-desktop-data.install  plasma-desktop-data.qml-ignore  plasma-desktop-dev.install  plasma-desktop.install  plasma-desktop.maintscript  rules
debian/meta/: cmake-ignore
debian/patches/: Drop-the-patch-version-for-breeze.patch  allow_uxterm_overrides.diff  series
debian/source/: lintian-overrides
debian/upstream/: metadata
kcms/: CMakeLists.txt
kcms/colors/: colors.cpp
kcms/desktoplayout/: CMakeLists.txt  Messages.sh  config-kcm.h.cmake  desktoplayoutsettings.kcfg  dltool.cpp  kcm.cpp  kcm.h  kcm_desktoplayout.desktop  kcmmain.cpp
kcms/desktoplayout/package/: metadata.desktop
kcms/desktoplayout/package/contents/ui/: main.qml
kcms/lookandfeel/: CMakeLists.txt  kcm.cpp  kcm.h  lnftool.cpp  qtstyletool.cpp  themecolourisertool.cpp
kcms/lookandfeel/package/contents/ui/: main.qml
kcms/spellchecking/: spellchecking.h
po/af/: kaccess.po  kcm5_componentchooser.po  kcm5_icons.po  kcm5_joystick.po  kcm5_kded.po  kcm_colors.po  kcm_cursortheme.po  kcm_desktoppaths.po  kcm_fonts.po  kcm_launchfeedback.po  kcmaccess.po  kcmformats.po  kcmkclock.po  kcmkeyboard.po  kcmkeys.po  kcmmouse.po  kcmsmserver.po  kcmstyle.po  kfontinst.po  knetattach5.po  krdb.po  plasma_applet_org.kde.desktopcontainment.po
po/ar/: attica_kde_plugin.po  kaccess.po  kcm5_baloofile.po  kcm5_componentchooser.po  kcm5_device_automounter.po  kcm5_emoticons.po  kcm5_icons.po  kcm5_joystick.po  kcm5_kded.po  (+45 more)
(+3869 files in other folders)
